Bug fixes&Change Password Feature

--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -85,7 +85,47 @@
                     android:layout_height="match_parent"
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:orientation="vertical">
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/currentPassTIL"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/tvPasswordInfo"
+                        android:layout_marginTop="@dimen/_10sdp"
+                        android:layout_marginBottom="@dimen/_20sdp"
+                        android:hint="Current Password"
+                        android:visibility="gone"
+                        android:clickable="false"
+                        android:textColorHint="@color/primary_black"
+                        app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
+                        app:boxCornerRadiusBottomStart="@dimen/_10sdp"
+                        app:boxCornerRadiusTopEnd="@dimen/_10sdp"
+                        app:boxCornerRadiusTopStart="@dimen/_10sdp"
+                        app:boxStrokeColor="@color/primary_green"
+                        app:endIconDrawable="@drawable/ic_eyeopen"
+                        app:endIconMode="custom"
+                        app:endIconTint="@color/xdark_gray"
+                        app:errorIconDrawable="@null"
+                        app:hintTextColor="@color/primary_green">
 
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/currentPassET"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%*?"
+                            android:fontFamily="@font/opensans_semibold"
+                            android:imeOptions="actionDone"
+                            android:maxLength="12"
+                            android:maxLines="1"
+                            android:editable="false"
+                            android:enabled="false"
+                            android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
+                            android:singleLine="true"
+                            android:textColor="@color/text_color"
+                            android:textColorHint="@color/light_gray"
+                            android:textSize="@dimen/_12ssp" />
+
+                    </com.google.android.material.textfield.TextInputLayout>
                     <RelativeLayout
                         android:id="@+id/layoutPwd"
                         android:layout_width="match_parent"
@@ -162,6 +202,30 @@
                         </LinearLayout>
 
                     </RelativeLayout>
+                    <LinearLayout
+                        android:id="@+id/oldnewMatchTV"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_5sdp"
+                        android:gravity="center"
+                        android:orientation="horizontal"
+                        android:visibility="gone">
+
+                        <ImageView
+                            android:layout_width="@dimen/_12sdp"
+                            android:layout_height="@dimen/_12sdp"
+                            android:src="@drawable/ic_erro" />
+
+                        <TextView
+                            android:id="@+id/ssnErrorTV"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="New password should not match with Old password"
+                            android:layout_marginStart="@dimen/_5sdp"
+                            android:fontFamily="@font/opensans_regular"
+                            android:textColor="@color/error_red"
+                            android:textSize="11sp" />
+                    </LinearLayout>
 
                     <TextView
                         android:id="@+id/tvPasswordInfo"
