--- a/app/src/main/res/layout/outlinebox_phone_number_layout.xml
+++ b/app/src/main/res/layout/outlinebox_phone_number_layout.xml
@@ -42,7 +42,7 @@
 
         </LinearLayout>
 
-        <com.santalu.maskara.widget.MaskEditText
+        <com.greenbox.coyni.utils.MaskEditText.widget.MaskEditText
             android:id="@+id/pnET"
             android:layout_width="match_parent"
             android:layout_height="55dp"
