--- a/app/src/main/res/layout/outlinebox_phone_number_update_layout.xml
+++ b/app/src/main/res/layout/outlinebox_phone_number_update_layout.xml
@@ -15,7 +15,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <com.santalu.maskara.widget.MaskEditText
+        <com.greenbox.coyni.utils.MaskEditText.widget.MaskEditText
             android:id="@+id/pnET"
             android:layout_width="match_parent"
             android:layout_height="55dp"
@@ -33,7 +33,7 @@
             android:textCursorDrawable="@drawable/cursor_color"
             android:fontFamily="@font/opensans_semibold"
             android:digits="0123456789"
-            android:imeOptions="actionNext"/>
+            android:imeOptions="actionNext" />
 
 
     </LinearLayout>
