--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -51,4 +51,14 @@
         </attr>
         <attr name="showDayOfWeekTitle" format="boolean" />
     </declare-styleable>
+
+    <declare-styleable name="MaskEditText">
+        <attr name="mask" format="string" />
+        <attr name="maskCharacter" format="string" />
+        <attr name="maskStyle" format="enum">
+            <enum name="normal" value="0" />
+            <enum name="completable" value="1" />
+            <enum name="persistent" value="2" />
+        </attr>
+    </declare-styleable>
 </resources>
