--- a/app/src/main/res/layout/activity_edit_card.xml
+++ b/app/src/main/res/layout/activity_edit_card.xml
@@ -94,7 +94,7 @@
                             android:layout_height="wrap_content"
                             android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                             android:fontFamily="@font/opensans_semibold"
-                            android:hint=""
+                            android:focusable="false"
                             android:imeOptions="actionNext"
                             android:inputType="text|textCapSentences"
                             android:maxLength="50"
@@ -212,7 +212,7 @@
                             android:layout_height="wrap_content"
                             android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890/-#&amp;(),:.;"
                             android:fontFamily="@font/opensans_semibold"
-                            android:hint=""
+                            android:textColorHint="@color/light_gray"
                             android:imeOptions="actionNext"
                             android:inputType="text|textCapSentences"
                             android:maxLength="100"
@@ -272,7 +272,7 @@
                             android:layout_height="wrap_content"
                             android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890/-#&amp;(),:.;"
                             android:fontFamily="@font/opensans_semibold"
-                            android:hint=""
+                            android:textColorHint="@color/light_gray"
                             android:imeOptions="actionNext"
                             android:inputType="text|textCapSentences"
                             android:maxLength="100"
@@ -306,7 +306,7 @@
                             android:layout_height="wrap_content"
                             android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                             android:fontFamily="@font/opensans_semibold"
-                            android:hint=""
+                           android:textColorHint="@color/light_gray"
                             android:imeOptions="actionNext"
                             android:inputType="text|textCapSentences"
                             android:maxLength="50"
@@ -453,7 +453,7 @@
                             android:layout_height="wrap_content"
                             android:digits="1234567890"
                             android:fontFamily="@font/opensans_semibold"
-                            android:hint=""
+                            android:textColorHint="@color/light_gray"
                             android:imeOptions="actionDone"
                             android:inputType="number|textNoSuggestions"
                             android:maxLength="5"
