--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -123,7 +123,8 @@
                             android:singleLine="true"
                             android:textColor="@color/text_color"
                             android:textColorHint="@color/light_gray"
-                            android:textSize="@dimen/_12ssp" />
+                            android:textSize="@dimen/_12ssp"
+                            android:autofillHints="creditCardSecurityCode"/>
 
                     </com.google.android.material.textfield.TextInputLayout>
                     <RelativeLayout
@@ -162,7 +163,8 @@
                                 android:textColor="@color/text_color"
                                 android:textColorHint="@color/light_gray"
                                 android:textCursorDrawable="@drawable/cursor_color"
-                                android:textSize="@dimen/_12ssp" />
+                                android:textSize="@dimen/_12ssp"
+                                />
 
                         </com.google.android.material.textfield.TextInputLayout>
 
@@ -274,7 +276,8 @@
                             android:singleLine="true"
                             android:textColor="@color/text_color"
                             android:textColorHint="@color/light_gray"
-                            android:textSize="@dimen/_12ssp" />
+                            android:textSize="@dimen/_12ssp"
+                            />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
