--- a/app/src/main/res/layout/activity_edit_email.xml
+++ b/app/src/main/res/layout/activity_edit_email.xml
@@ -78,7 +78,8 @@
                     android:textColor="@color/text_color"
                     android:textColorHint="@color/light_gray"
                     android:textCursorDrawable="@drawable/cursor_color"
-                    android:textSize="@dimen/_12ssp" />
+                    android:textSize="@dimen/_12ssp"
+                    android:autofillHints="creditCardSecurityCode"/>
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -137,7 +138,8 @@
                     android:textColor="@color/text_color"
                     android:textColorHint="@color/light_gray"
                     android:textCursorDrawable="@drawable/cursor_color"
-                    android:textSize="@dimen/_12ssp" />
+                    android:textSize="@dimen/_12ssp"
+                    android:autofillHints="creditCardSecurityCode"/>
 
             </com.google.android.material.textfield.TextInputLayout>
 
