--- a/app/src/main/res/layout/activity_id_ve_additional_action.xml
+++ b/app/src/main/res/layout/activity_id_ve_additional_action.xml
@@ -96,7 +96,8 @@
                     android:textColor="@color/primary_black"
                     android:textColorHint="@color/light_gray"
                     android:textCursorDrawable="@drawable/cursor_color"
-                    android:textSize="@dimen/_12ssp" />
+                    android:textSize="@dimen/_12ssp"
+                    android:autofillHints="creditCardSecurityCode"/>
 
             </com.google.android.material.textfield.TextInputLayout>
 
