--- a/app/src/main/res/layout/cvvlayout.xml
+++ b/app/src/main/res/layout/cvvlayout.xml
@@ -54,7 +54,8 @@
             android:textColorHint="@color/light_gray"
             android:textCursorDrawable="@drawable/cursor_color"
             android:textIsSelectable="false"
-            android:textSize="@dimen/_12ssp" />
+            android:textSize="@dimen/_12ssp"
+            android:autofillHints="creditCardSecurityCode"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
